# firefly

./: .clangd  .gitignore  CMakeLists.txt  README.md
benchmarks/: benchmark_serving.py
cmake/: CPM.cmake  CUDAConf.cmake  CXXConf.cmake  Deps.cmake
example/: test_grpc_client.py  test_grpc_stream.py
include/firefly/: engine.h  kernels.h  model_loader.h  model_registry.h  queue.h  radix_tree.h  request.h  scheduler.h  session.h  tensor.h  tensor_view.h  tokenizer.h  types.h
include/firefly/hal/: error.h  event.h  graph.h  memory.h  pinned_memory.h  stream.h
include/firefly/io/: safetensors.h
include/firefly/mm/: allocator.h  memory_mapper.h  model_weight_pool.h
include/firefly/model/: model.h  qwen_config.h  qwen_model.h
proto/: firefly.proto
src/: CMakeLists.txt  allocator_cpu.cc  allocator_cuda.cu  engine.cc  grpc_adapter.cc  grpc_adapter.h  model_registry.cc  radix_tree.cc  scheduler.cc  server.cu  tensor.cc  tokenizer.cc
src/kernels/: activation.cu  add.cu  attention.cu  embedding.cu  linear.cu  norm.cu  rope.cu  sampling.cu
src/model/: qwen_model.cu
